crates/myso/src/unit_tests/snapshots/myso__upgrade_compatibility__upgrade_compatibility_tests__addresses_first.snap
---
source: crates/myso/src/upgrade_compatibility/../unit_tests/upgrade_compatibility_tests.rs
expression: normalize_path(output)
---
error[Compatibility E01006]: module missing
  ┌─ /fixtures/upgrade_errors/missing_module_toml/addresses_first/Move.toml:4:1
  │  
4 │ ╭ [package]
5 │ │ name = "upgrades"
  │ ╰─────────────────^ Package is missing module 'identifier'
  │  
  = Modules which are part package cannot be removed during an upgrade.
  = Add missing module 'identifier' back to the package.
